# Twin4Build

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AirToAirHeatRecoveryModel.py  BuildingEnergyModel.py  BuildingSpaceModel.py  CONTRIBUTING.md  CoilModel.py  ControllerModel.py  DamperModel.py  DryCoilDiscretized_Jacobian.json  DryCoilDiscretized_Jacobian_Feb.json  DryCoilDiscretized_Jacobian_Feb_1day.json  DryCoilDiscretized_Jacobian_Feb_1nPipSeg.json  DryCoilDiscretized_Jacobian_Feb_4nReg.json  DryCoilDiscretized_Jacobian_Feb_6nPipSeg.json  DryCoilEffectivenessNTU.json  DryCoilEffectivenessNTU_Jacobian.json  FanModel.py  FlowMeterModel.py  LICENSE.txt  MANIFEST.in  README.md  README_trust_constr_optimization.md  Report.py  Saref4Build.py  Saref4Syst.py  Schedule.py  SpaceDataCollection.py  SpaceHeaterModel.py  ValveModel.py  WeatherStation.py  building_energy_model.py  calibrated_air_to_heat_recovery_parameters.json  calibrated_controller_parameters.json  config.ini  configuration_template.xlsx  copy.sh  discover_uuids.py  (+45 more)
.github/workflows/: publish_pypi.yml  pytest.yml  ub-py3-10.yml  ub-py3-11.yml  ub-py3-12.yml  ub-py3-7.yml  ub-py3-8.yml  ub-py3-9.yml  unittest.yml  win-py3-10.yml  win-py3-11.yml  win-py3-12.yml  win-py3-8.yml  win-py3-9.yml
20230821_103537_chain_log/chain_0/: chain_0.json  covchainfile.txt
20230821_103537_chain_log/chain_1/: chain_1.json  chainfile.txt  covchainfile.txt  sschainfile.txt  txtlogfile.txt
20230821_103537_chain_log/chain_2/: chain_2.json  covchainfile.txt  s2chainfile.txt  sschainfile.txt
20230821_103537_chain_log/chain_3/: chain_3.json  covchainfile.txt  s2chainfile.txt  sschainfile.txt  txtlogfile.txt
20230821_103537_chain_log/chain_4/: chainfile.txt  covchainfile.txt  s2chainfile.txt  txtlogfile.txt
20230821_103537_chain_log/chain_5/: chain_5.json  chainfile.txt  covchainfile.txt  s2chainfile.txt  sschainfile.txt  txtlogfile.txt
20230821_103537_chain_log/chain_6/: chain_6.json  covchainfile.txt  sschainfile.txt  txtlogfile.txt
20230821_103537_chain_log/chain_7/: chain_7.json  chainfile.txt  covchainfile.txt  sschainfile.txt  txtlogfile.txt
20230821_174727_chain_log/chain_0/: covchainfile.txt  txtlogfile.txt
20230822_092158_chain_log/chain_0/: chainfile.txt  sschainfile.txt
20230822_121303_chain_log/chain_0/: chainfile.txt  s2chainfile.txt  txtlogfile.txt
20230822_121303_chain_log/chain_1/: chain_1.json  s2chainfile.txt  sschainfile.txt  txtlogfile.txt
20230822_121303_chain_log/chain_2/: chain_2.json  chainfile.txt  s2chainfile.txt  sschainfile.txt  txtlogfile.txt
20230822_121303_chain_log/chain_3/: chain_3.json  chainfile.txt  covchainfile.txt  txtlogfile.txt
20230822_121303_chain_log/chain_4/: covchainfile.txt  sschainfile.txt
20230822_121303_chain_log/chain_5/: chainfile.txt  sschainfile.txt
20230822_121303_chain_log/chain_6/: chain_6.json  covchainfile.txt  s2chainfile.txt  sschainfile.txt
20230822_121303_chain_log/chain_7/: chain_7.json  chainfile.txt  covchainfile.txt  s2chainfile.txt
20230822_155647_chain_log/chain_0/: chainfile.txt  s2chainfile.txt  txtlogfile.txt
20230822_155647_chain_log/chain_1/: chain_1.json  chainfile.txt  covchainfile.txt
20230822_155647_chain_log/chain_2/: chain_2.json  chainfile.txt  s2chainfile.txt
20230822_155647_chain_log/chain_3/: chain_3.json  s2chainfile.txt  sschainfile.txt
20230822_164209_chain_log/chain_0/: chain_0.json  chainfile.txt  covchainfile.txt
20230822_164209_chain_log/chain_1/: chainfile.txt  covchainfile.txt  s2chainfile.txt
20230822_164209_chain_log/chain_2/: chain_2.json  chainfile.txt  covchainfile.txt  s2chainfile.txt  sschainfile.txt  txtlogfile.txt
20230822_164209_chain_log/chain_3/: covchainfile.txt  s2chainfile.txt  sschainfile.txt
20230822_165944_chain_log/chain_0/: covchainfile.txt  txtlogfile.txt
20230822_165944_chain_log/chain_1/: covchainfile.txt  s2chainfile.txt  sschainfile.txt  txtlogfile.txt
20230822_165944_chain_log/chain_2/: chainfile.txt  (+2 more)
docs/: Makefile  README.rst  clean_sphinx_docs.py  conf.py  index.rst  make.bat  modules.rst  requirements.txt  twin4build.config.rst  twin4build.estimator.tests.rst  twin4build.evaluator.rst  twin4build.evaluator.tests.rst  twin4build.generated_files.plots.rst  twin4build.logger.rst  twin4build.model.tests.rst  twin4build.monitor.rst  twin4build.monitor.tests.rst  twin4build.rst  twin4build.saref.command.rst  twin4build.saref.device.rst  twin4build.saref.function.rst  twin4build.saref.function.sensing_function.rst  twin4build.saref.measurement.rst  twin4build.saref.profile.rst  twin4build.saref.profile.schedule.occupancy.rst  twin4build.saref.property_.occupancy.rst  twin4build.saref.property_.opening_position.rst  twin4build.saref.property_.power.rst  twin4build.saref.property_.s4bldg_property.rst  twin4build.saref.property_.temperature.outlet_temperature.rst  twin4build.saref.property_.temperature.outlet_temperature.secondary_outlet_temperature.rst  twin4build.saref.property_.temperature.rst  twin4build.saref.rst  twin4build.saref.service.rst  twin4build.saref.unit_of_measure.energy_unit.rst  twin4build.saref.unit_of_measure.flow_unit.rst  twin4build.saref.unit_of_measure.illuminance_unit.rst  twin4build.saref.unit_of_measure.pressure_unit.rst  twin4build.saref.unit_of_measure.temperature_unit.rst  twin4build.saref4bldg.building.rst  (+27 more)
paper_source/: 10_Author_statement.tex  10space_1v_1h_0c_compile.tex  11_Appendix.tex  1_Introduction.tex  1space_1v_1h_0c_compile.tex  2_Methodology.tex  3_Case_definition.tex  6_Results_and_Discussion.tex  7_Conclusion.tex  8_Declaration_of_competing_interest.tex  9_Acknowledgements.tex  DT_data_structure_compile.tex  DT_data_structure_cycle_compile.tex  DT_framework_saref_representation_compile.tex  DefineDocumentClassInputs.tex  Master.tex  Topology_1space_1v_1h_0c_compile.tex  cas-refs.bib  compile_table.tex  temp_style.sty
saref/: __init__.py
saref4bldg/: __init__.py
saref4syst/: __init__.py  connection.py  connection_point  system.py
scripts/: README.md  setup_dev.py  validate_code.py
twin4build/: __init__.py
(+3085 files in other folders)
